@@ -1,7 +1,6 @@
 package com.project.edugov.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
@@ -32,6 +31,7 @@ public class ProgramServiceImpl implements ProgramService {
 	private ProgramDTO mapToCustomDto(Program program) {
 		ProgramDTO dto = modelMapper.map(program, ProgramDTO.class);
 		try {
+			// Fetching Admin details from Identity Service
 			UserFeignDTO admin = userClient.getUserById(program.getCreatedByAdminId());
 			if (admin != null) {
 				dto.setAdminId(admin.getUserId());
@@ -41,7 +41,7 @@ public class ProgramServiceImpl implements ProgramService {
 				dto.setAdminId(program.getCreatedByAdminId());
 			}
 		} catch (Exception e) {
-			log.error("Remote Service Error: Admin details unavailable for ID {}", program.getCreatedByAdminId());
+			log.error("error: identity service unreachable for admin id {}", program.getCreatedByAdminId());
 			dto.setAdminId(program.getCreatedByAdminId());
 			dto.setAdminName("Information Unavailable");
 			dto.setAdminEmail("N/A");
@@ -51,74 +51,80 @@ public class ProgramServiceImpl implements ProgramService {
 
 	@Override
 	public ProgramDTO createProgram(Program program, Long adminId) {
-		log.info("Service: Checking conditions for creating program '{}'", program.getTitle());
+		log.info("Creating new program with title: {}", program.getTitle());
 		if (adminId == null || adminId <= 0) {
-			log.error("Failed: Admin ID is null or invalid");
+			log.warn("create failed: admin id is invalid or null");
 			throw new APIException(HttpStatus.BAD_REQUEST, "A valid Admin ID is required.");
 		}
+
 		// 1. Verify Admin via Identity Service
 		try {
 			UserFeignDTO admin = userClient.getUserById(adminId);
 			if (admin == null || !Role.UNIV_ADMIN.equals(admin.getRole())) {
-				log.warn("Unauthorized: User {} is not a UNIV_ADMIN", adminId);
+				log.warn("unauthorized: user {} is not an admin in identity service", adminId);
 				throw new APIException(HttpStatus.FORBIDDEN,
 						"Access Denied: Only University Admins can create programs.");
 			}
 		} catch (feign.FeignException e) {
-			log.error("Feign Error: Status Code {}", e.status());
-			// This handles "Not Found" logic even if Identity service returns
-			// 500/RuntimeException
+			log.error("error: identity service returned status code {}", e.status());
 			if (e.status() == 404 || e.status() == 500 || e.status() == 403
 					|| e.contentUTF8().toLowerCase().contains("not found")) {
+				log.error("not found: admin {} missing in identity service", adminId);
 				throw new ResourceNotFoundException("Admin not found with ID: " + adminId);
 			}
 			throw new APIException(HttpStatus.SERVICE_UNAVAILABLE, "Identity Service is unreachable.");
 		}
+
 		if (programRepo.existsByTitleIgnoreCase(program.getTitle())) {
-			log.warn("Failed: Program title '{}' already exists", program.getTitle());
+			log.warn("conflict: program title '{}' already exists in db", program.getTitle());
 			throw new APIException(HttpStatus.BAD_REQUEST, "Program title already exists.");
 		}
+
 		program.setCreatedByAdminId(adminId);
 		Program savedProgram = programRepo.save(program);
-		log.info("Service: Program '{}' saved successfully", savedProgram.getTitle());
+		log.info("Program created successfully with id {}", savedProgram.getProgramId());
 		return mapToCustomDto(savedProgram);
 	}
 
 	@Override
 	public ProgramDTO getProgramById(Long id) {
-		log.info("Service: Fetching program details for ID: {}", id);
+		log.info("Fetching details for program id: {}", id);
 		if (id == null || id <= 0) {
 			throw new APIException(HttpStatus.BAD_REQUEST, "Invalid Program ID provided.");
 		}
 		Program program = programRepo.findById(id).orElseThrow(() -> {
-			log.warn("Program with ID {} not found", id);
+			log.warn("not found: program with id {} not in db", id);
 			return new ResourceNotFoundException("Program not found with ID: " + id);
 		});
+		log.info("Getting program with title : '{}'", program.getTitle());
 		return mapToCustomDto(program);
 	}
 
 	@Override
 	public List<ProgramDTO> searchPrograms(String title) {
-		log.info("Service: Searching for keyword '{}'", title);
+		log.info("Fetching programs matching keyword: {}", title);
 		if (title == null || title.trim().isEmpty()) {
 			throw new APIException(HttpStatus.BAD_REQUEST, "Search keyword cannot be empty.");
 		}
 		List<Program> programs = programRepo.findByTitleContainingIgnoreCase(title);
 		if (programs.isEmpty()) {
-			log.warn("Service: No matches found for title '{}'", title);
+			log.warn("not found: no programs match the title '{}'", title);
 			throw new ResourceNotFoundException("No programs found matching: " + title);
 		}
-		return programs.stream().map(this::mapToCustomDto).collect(Collectors.toList());
+		log.info("Getting {} programs matching this title", programs.size());
+		return programs.stream().map(this::mapToCustomDto).toList();
 	}
 
 	@Override
 	public ProgramDTO updateProgramById(Long id, Program details) {
-		log.info("Service: Validating update conditions for ID: {}", id);
+		log.info("Updating program {} with new info...", id);
 		Program existingProgram = programRepo.findById(id)
 				.orElseThrow(() -> new ResourceNotFoundException("Program not found with ID: " + id));
+
 		boolean isChanged = false;
 		if (details.getTitle() != null && !details.getTitle().equalsIgnoreCase(existingProgram.getTitle())) {
 			if (programRepo.existsByTitleIgnoreCase(details.getTitle())) {
+				log.warn("Update failed: title '{}' already in use", details.getTitle());
 				throw new APIException(HttpStatus.BAD_REQUEST, "Title already in use.");
 			}
 			existingProgram.setTitle(details.getTitle());
@@ -140,22 +146,26 @@ public class ProgramServiceImpl implements ProgramService {
 			existingProgram.setStatus(details.getStatus());
 			isChanged = true;
 		}
+
 		if (!isChanged) {
-			log.info("Service: No changes detected for Program ID: {}", id);
+			log.info("No changes detected for program id: {}", id);
 			throw new APIException(HttpStatus.BAD_REQUEST, "No changes detected. Program is already up to date.");
 		}
-		log.info("Service: Update successful for ID: {}", id);
-		return mapToCustomDto(programRepo.save(existingProgram));
+
+		Program saved = programRepo.save(existingProgram);
+		log.info("Program {} updated successfully", saved.getProgramId());
+		return mapToCustomDto(saved);
 	}
 
 	@Override
 	public List<ProgramDTO> getAllPrograms() {
-		log.info("Service: Fetching all program records");
+		log.info("Fetching full list of programs...");
 		List<Program> programs = programRepo.findAll();
 		if (programs.isEmpty()) {
-			log.info("Service: No records found in Database");
+			log.warn("db is empty: no programs registered");
 			throw new ResourceNotFoundException("No programs are currently registered.");
 		}
-		return programs.stream().map(this::mapToCustomDto).collect(Collectors.toList());
+		log.info("Total {} programs found", programs.size());
+		return programs.stream().map(this::mapToCustomDto).toList();
 	}
 }
